--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="container">
       <div>
-        <img src="/images/image-qr-code.png" class="image-card" />
+        <img src="images/image-qr-code.png" class="image-card" />
         <h2>Improve your front-end<br />skills by building projects</h2>
         <p>
           Scan the QR code to visit Frontend<br />Mentor and take your coding
